syntax = "proto3";

package grpc;


service DataService {
  // Streaming Bidireccional
  rpc ConnectStream(stream DataSaverUpload) returns (stream DataSaverDownload);
}


// =================
// CARRIL DE SUBIDA
// =================
message DataSaverUpload {
  string edge_id = 1;
  oneof payload {
    DataSaverUploadToEdge to_edge = 2;
  }
}


// =================
// CARRIL DE BAJADA
// =================
message DataSaverDownload {
  oneof payload {
    DataSaverDownloadFromEdge from_edge = 1;
  }
}

message DataSaverDownloadFromEdge {
  oneof payload {
    Measurement measurement = 1;
    Monitor monitor = 2;
    SystemMetrics metrics = 3;
    AlertAir alert_air = 4;
    AlertTh alert_th = 5;
  }
}

message DataSaverUploadToEdge {
  oneof payload {
    Heartbeat heartbeat = 1;
  }
}

message Metadata {
  string sender_user_id = 1;
  string destination_id = 2;
  int64 timestamp = 3;
}

message Measurement {
  Metadata metadata = 1;
  string network = 2;
  int64 pulse_counter = 3;
  int64 pulse_max_duration = 4;
  float temperature = 5;
  float humidity = 6;
  float co2_ppm = 7;
  uint32 sample = 8;
}

message AlertAir {
  Metadata metadata = 1;
  string network = 2;
  float co2_initial_ppm = 3;
  float co2_actual_ppm = 4;
}

message AlertTh {
  Metadata metadata = 1;
  string network = 2;
  float initial_temp = 3;
  float actual_temp = 4;
}

message Monitor {
  Metadata metadata = 1;
  string network = 2;
  int64 mem_free = 3;
  int64 mem_free_hm = 4;
  int64 mem_free_block = 5;
  int64 mem_free_internal = 6;
  int64 stack_free_min_coll = 7;
  int64 stack_free_min_pub = 8;
  int64 stack_free_min_mic = 9;
  int64 stack_free_min_th = 10;
  int64 stack_free_min_air = 11;
  int64 stack_free_min_mon = 12;
  string wifi_ssid = 13;
  int32 wifi_rssi = 14;
  int64 active_time = 15;
}

message Heartbeat {
  Metadata metadata = 1;
  bool beat = 2;
}

message SystemMetrics {
  Metadata metadata = 1;
  uint64 uptime_seconds = 2;
  float cpu_usage_percent = 3;
  float cpu_temp_celsius = 4;
  uint64 ram_total_mb = 5;
  uint64 ram_used_mb = 6;
  uint64 sd_total_gb = 7;
  uint64 sd_used_gb = 8;
  float sd_usage_percent = 9;
  uint64 network_rx_bytes = 10;
  uint64 network_tx_bytes = 11;
  int32 wifi_rssi = 12;
  int32 wifi_signal_dbm = 13;
}